--- a/app/src/main/res/layout/cash_layout.xml
+++ b/app/src/main/res/layout/cash_layout.xml
@@ -1,6 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/cash_bg">
 
+    <RelativeLayout
+        android:layout_width="320dp"
+        android:layout_height="510dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.728"
+        tools:ignore="MissingConstraints"
+        android:background="#0D000000">
+
+        <TextView
+            android:id="@+id/tvCash"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/button_gradient_border"
+            android:clickable="true"
+            android:fontFamily="monospace"
+            android:padding="10dp"
+            android:text="Cash"
+            android:textColor="#EF5F5D5D"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/editTextNumber"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/tvCash"
+            android:textAlignment="textEnd"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="50dp"
+            android:background="@drawable/edit_text_background"
+            android:ems="10"
+            android:hint="VND"
+            android:inputType="number"
+            android:paddingLeft="10dp"
+            android:textSize="50sp" />
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
