--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -1,6 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/LoginBG1"
+    android:alpha="0.8">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/horse"
+            android:layout_width="wrap_content"
+            android:layout_height="197dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/ic_horse" />
+
+        <TextView
+            android:id="@+id/horseRacing"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/horse"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="33dp"
+            android:layout_toEndOf="@id/horse"
+            android:background="@drawable/text_gradient"
+            android:text="Horse Racing"
+            android:fontFamily="sans-serif-black"
+            android:textColor="#FBA95C"
+            android:textSize="70sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvStart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:padding="10dp"
+            android:background="@drawable/button_gradient_border"
+            android:layout_below="@id/editText"
+            android:fontFamily="monospace"
+            android:text="Start"
+            android:textColor="#EF5F5D5D"
+            android:textSize="50sp"
+            android:textStyle="bold"
+            android:clickable="true"
+            android:layout_centerInParent="true" />
+
+        <TextView
+            android:id="@+id/tvTurtorial"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvStart"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="30sp"
+            android:background="@drawable/button_gradient_border"
+
+            android:clickable="true"
+            android:fontFamily="monospace"
+            android:padding="10dp"
+            android:text="Turtorial"
+            android:textAlignment="center"
+            android:textColor="#EF5F5D5D"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="User Name"
+            android:textSize="30sp"
+            android:background="@drawable/edit_text_background"
+            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:padding="10dp" />
+    </RelativeLayout>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
