--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -75,6 +75,7 @@
                     android:id="@+id/textView4"
                     android:layout_width="149dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="9dp"
                     android:layout_weight="1"
                     android:text="Money:"
                     android:textSize="20sp"
@@ -93,8 +94,9 @@
                     android:id="@+id/textView"
                     android:layout_width="147dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
                     android:layout_weight="1"
-                    android:text="Bet ($):"
+                    android:text="Bet: ($)"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
