Design Flow UI V1
Design Flow UI, basic flow UI but the home layout have problem during css, don't know the horse bet work so Im just connect randomly to make it work

--- a/app/src/main/res/layout/cash_layout.xml
+++ b/app/src/main/res/layout/cash_layout.xml
@@ -19,7 +19,7 @@
         android:background="#0D000000">
 
         <TextView
-            android:id="@+id/tvCash"
+            android:id="@+id/tvSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -34,10 +34,10 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/editTextNumber"
+            android:id="@+id/depositAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@id/tvCash"
+            android:layout_above="@id/tvSave"
             android:textAlignment="textEnd"
             android:layout_centerInParent="true"
             android:layout_marginLeft="30dp"
