--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -101,7 +101,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/editTextNumber2"
+                    android:id="@+id/betAmount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -118,7 +118,7 @@
                 >
 
                 <CheckBox
-                    android:id="@+id/checkBox"
+                    android:id="@+id/horse1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -148,7 +148,7 @@
                 android:orientation="horizontal">
 
                 <CheckBox
-                    android:id="@+id/checkBox3"
+                    android:id="@+id/horse2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -178,7 +178,7 @@
                 android:orientation="horizontal">
 
                 <CheckBox
-                    android:id="@+id/checkBox4"
+                    android:id="@+id/horse3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -213,7 +213,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/button"
+                android:id="@+id/tvGo"
                 android:layout_width="wrap_content"
                 android:layout_height="77dp"
                 android:layout_marginTop="20dp"
@@ -231,7 +231,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/button2"
+                android:id="@+id/tvCash"
                 android:layout_width="wrap_content"
                 android:layout_height="77dp"
                 android:layout_marginTop="20dp"
