edit textview's name

--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -182,7 +182,7 @@
                         android:textSize="20sp" />
 
                     <EditText
-                        android:id="@+id/editTextNumber"
+                        android:id="@+id/editTextNumber6"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="30dp"
